# app-template-vcpkg-cmake-boost-test-ci

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_main.cpp  vcpkg.json
.github/workflows/: build.yml
